[gd_scene load_steps=13 format=3 uid="uid://bidu821cbu1w8"]

[ext_resource type="Script" path="res://scripts/loading_screen.gd" id="1_gnwq8"]
[ext_resource type="Texture2D" uid="uid://ctk0rc76s5tri" path="res://assets/backgrounds/Frame 15.png" id="1_jh87b"]
[ext_resource type="Texture2D" uid="uid://yd5bv3d10rrn" path="res://assets/backgrounds/Alt History.png" id="2_nnry1"]
[ext_resource type="Texture2D" uid="uid://b8b4b7udupvoa" path="res://assets/backgrounds/Rewrite the past....png" id="3_mc58l"]
[ext_resource type="Texture2D" uid="uid://cnbdt1c782p6n" path="res://assets/backgrounds/image-removebg-preview 1.png" id="4_0vled"]
[ext_resource type="Texture2D" uid="uid://cpgba7n4ishdt" path="res://assets/backgrounds/image-removebg-preview (2) 2.png" id="5_6ymv3"]
[ext_resource type="AudioStream" uid="uid://be8102le4f5up" path="res://assets/sounds/sudden-shock-reveal-bass-283846.mp3" id="6_t1e3v"]
[ext_resource type="Texture2D" uid="uid://bgs5muwkk7xtu" path="res://assets/backgrounds/image-removebg-preview (2) 1.png" id="6_x5m8o"]
[ext_resource type="AudioStream" uid="uid://my2shq60tro6" path="res://assets/sounds/mouse-click-sound-233951.mp3" id="7_hycf1"]
[ext_resource type="FontFile" uid="uid://dfy4ntjfyj8w0" path="res://assets/fonts/Manrope-VariableFont_wght.ttf" id="8_46k3n"]
[ext_resource type="Texture2D" uid="uid://cn26kyhbr6cdl" path="res://assets/backgrounds/Rectangle 60.png" id="9_isorq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_angyy"]
texture = ExtResource("9_isorq")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_gnwq8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_jh87b")

[node name="AltHistory" type="Sprite2D" parent="."]
position = Vector2(633, 324)
scale = Vector2(0.854962, 0.854962)
texture = ExtResource("2_nnry1")

[node name="Subline" type="Sprite2D" parent="."]
position = Vector2(650, 478)
texture = ExtResource("3_mc58l")

[node name="BigSplash" type="Sprite2D" parent="."]
position = Vector2(850, 276)
texture = ExtResource("4_0vled")

[node name="SplashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_t1e3v")

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hycf1")

[node name="Drops1" type="Sprite2D" parent="."]
position = Vector2(304, 389)
texture = ExtResource("5_6ymv3")

[node name="Drops2" type="Sprite2D" parent="."]
position = Vector2(1007, 549)
texture = ExtResource("6_x5m8o")

[node name="Loading" type="Label" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 581.0
offset_right = 596.0
offset_bottom = 604.0
scale = Vector2(2.92, 2.92)
text = "Loading..."

[node name="Enter" type="Button" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 584.0
offset_right = 809.0
offset_bottom = 672.0
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("8_46k3n")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_angyy")
text = "ENTER"
autowrap_mode = 1
